--- a/src/css/games/digitcode.less
+++ b/src/css/games/digitcode.less
@@ -27,10 +27,6 @@ html[data-theme=dark] {
 	}
 
 	.dgt_optionMarker {
-		color: var(--light-70);
-	}
-
-	.dgt_optionMarker {
 		color: var(--light-50);
 	}
 
@@ -48,12 +44,16 @@ html[data-theme=dark] {
 		filter: brightness(110%) contrast(150%);
 	}
 
-	html[data-theme=dark] .dgt_lineMarker-confirmed {
+	.dgt_space-confirmed-filled {
+		background-image: repeating-linear-gradient(90deg, var(--red-10), var(--red-80) 6px);
+	}
+
+	.dgt_lineMarker-confirmed {
 		color: var(--red-80);
 	}
 
 	.dgt_space-confirmed-revealed {
-		background: var(--green-80) !important;
+		background: var(--green-30) !important;
 	}
 
 	.dgt_playerAid {
